[package]
edition = "2024"
name = "meowbox"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "meowbox"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }


#strum = { version = "0.28.0", default-features = false }

critical-section = "1.2.0"
static_cell = "2.1.1"
ssd1306 = { version = "0.10.0", features = ["async", "graphics"] }
embedded-graphics = "0.8.1"
heapless = "0.9.2"
micromath = "2.1.0"
noise_perlin = "1.0.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
rotary-encoder-embedded = "0.5.0"
esp-storage = { version = "0.8.1", features = ["esp32s3"] }
embedded-storage = "0.3.1"
smart-leds = "0.4.0"
esp-hal-smartled = { version = "0.17.0", features = ["esp32s3"] }
either = { version = "1.15.0", default-features = false }
adv-shift-registers = "0.2.5"
embedded-hal = "1.0.0"
ili9341 = "0.6.0"
display-interface = "0.5.0"
embedded-hal-bus = "0.3.0"
display-interface-spi = "0.5.0"
# strum_macros = "0.28.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
